# sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
openagp/: __init__.py  _canonical.py  _schema.py  events.py  keys.py  policy.py
openagp/tools/: validate.py
scripts/: sync-schemas.sh
tests/: test_interop.py  test_policy.py  test_policy_interop.py  test_roundtrip.py
