[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagp"
version = "0.0.0"
description = "Reference Python SDK for the Agent Governance Protocol (AGP)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "OpenAGP contributors" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 1 - Planning",
]
dependencies = []

[project.urls]
Homepage = "https://openagp.io"
Repository = "https://github.com/openagp/sdk-python"
Specification = "https://github.com/openagp/spec"

[tool.hatch.build.targets.wheel]
packages = ["openagp"]
