[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagp"
version = "0.0.0"
description = "Reference Python SDK for the Agent Governance Protocol (AGP)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "OpenAGP contributors" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography >= 42.0.0",
  "rfc8785 >= 0.1.4",
  "jsonschema >= 4.21.0",
  "referencing >= 0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest >= 8.0.0",
  "pytest-cov >= 5.0.0",
  "ruff >= 0.6.0",
  "mypy >= 1.10.0",
]

[project.urls]
Homepage = "https://openagp.io"
Repository = "https://github.com/openagp/sdk-python"
Specification = "https://github.com/openagp/spec"
Issues = "https://github.com/openagp/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["openagp"]

[tool.hatch.build.targets.wheel.shared-data]
# Empty: schemas live inside the openagp/ package and are picked up automatically.

[tool.hatch.build.targets.sdist]
include = [
  "openagp",
  "tests",
  "scripts",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
